--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,26 +54,26 @@ jobs:
     
       - name: Run tests
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           uv run pytest
 
       - name: Generate migration revision
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           rm -rf alembic/versions/*
           mkdir -p alembic/versions
           uv run alembic revision --autogenerate -m "ci migration test"
 
       - name: Run Alembic migrations
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           uv run alembic upgrade head
       
       - name: Clean up and reset database & Alembic versions
         env:
           DATABASE_URL: ${{ secrets.CI_DB }}
         run: |
-          source venv/bin/activate
+          source .venv/bin/activate
           uv run python - <<'PY'
           import os
           import psycopg2
